Removed hardcoding of Hosting Links

--- a/backend/env.sample
+++ b/backend/env.sample
@@ -12,5 +12,10 @@ EXECUTION_TIMEOUT=30
 MAX_FILE_SIZE=52428800
 
 # CORS (comma-separated origins)
+# For local development:
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# For production (uncomment and update with your actual frontend URLs):
+# CORS_ORIGINS=https://your-frontend.vercel.app,https://your-frontend.onrender.com
+
 
